--- a/KuranX.App/App.config
+++ b/KuranX.App/App.config
@@ -4,23 +4,25 @@
   <appSettings>
 
     <add key="application_platform" value="x86" />
-    <add key="application_version" value="0.2.3" />
+    <add key="application_version" value="0.3.3" />
     <add key="application_type" value="Debug" />
     <add key="application_name" value="kuranx" />
     <add key="application_exe" value="KuranSünnetullah.exe" />
     <add key="application_id" value="3" />
     <add key="application_UpdateFolder" value="\Temp\ozturklab\" />
-    <add key="application_location" value="\ozturkLab\KuranSunnetullah\" />
+    <add key="application_location" value="" />
 
     <add key="api_adress" value="https://www.furkanozturklab.com/api" />
+    <add key="api_tokenName" value="post_securityCode" />
+    <add key="api_token" value="meltdown" />
 
     <add key="user_rememberMe" value="false" />
     <add key="user_pin" value="" />
     <add key="user_autoLogin" value="false" />
 
     <add key="app_animationSpeed" value="300" />
-    <add key="app_remiderTime" value="3" />
-    <add key="app_remiderWaitTime" value="3" />
+    <add key="app_remiderTime" value="10" />
+    <add key="app_remiderWaitTime" value="60" />
     <add key="app_remiderCount" value="3" />
     <add key="app_warningShowTime" value="3" />
   </appSettings>
